--- a/index.html
+++ b/index.html
@@ -62,17 +62,111 @@
   <section id="features">
     <div class="container">
       <div class="row">
-        <div class="features__description">
-          <p class="features__description--subheading">FEATURES</p>
-          <h1 class="features__description--heading">We have Amazing <span class="blue">Service</span></h1>
-          <p class="features__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.
-          </p>
+        <div class="features__wrapper">
+          <div class="features__description">
+            <p class="features__description--subheading"><span class="blue">FEATURES</span></p>
+            <h1 class="features__description--heading">We have Amazing <span class="blue">Service.</span></h1>
+            <p class="features__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
+          </div>
+          <div class="features__columns">
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">Secure</h2>
+                <p class="features__column--text-para">
+                  We strictly only deal with vendors that provide top notch security.
+                </p>
+              </div>
+            </div>
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">24/7 Support</h2>
+                <p class="features__column--text-para">
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">Customizable</h2>
+                <p class="features__column--text-para">
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">Reliable</h2>
+                <p class="features__column--text-para">
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">Fast</h2>
+                <p class="features__column--text-para">
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                </p>
+              </div>
+            </div>
+            <div class="features__column">
+              <figure class="features__img--container">
+                <img class="feature__img" src="./assests/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+              </figure>
+              <div class="features__column--text">
+                <h2 class="features__column--text-title">Easy</h2>
+                <p class="features__column--text-para">
+                  Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-
       </div>
     </div>
-
+  </section>
+  <section id="quality">
+    <div class="container">
+      <div class="row">
+        <div class="quality__wrapper">
+          <div class="quality__column-1">
+            <h2 class="quality__description--subheading">
+              <span class="blue">QUALITY WORK</span>
+            </h2>
+            <h1 class="quality__description--heading">
+              Designed & Developed by <span class="blue">Professionals.</span>
+            </h1>
+            <p class="quality__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.</p>
+              <button class="btn quality__btn">Learn More</button>
+          </div>
+          <div class="quality__column-2">
+            <figure class="quality__img--wrapper">
+              <img class="quality__img" src="./assests/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 </body>
