Steps section started

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="features__columns">
             <div class="features__column">
               <figure class="features__img--container">
-                <img class="feature__img" src="./assests/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                <img class="feature__img" src="./assests/shield icon.svg" alt="">
               </figure>
               <div class="features__column--text">
                 <h2 class="features__column--text-title">Secure</h2>
@@ -167,6 +167,57 @@
         </div>
       </div>
     </div>
+  </section>
+  <section id="steps">
+    <div class="container">
+      <div class="row">
+        <div class="steps__columns">
+          <div class="steps__column-1">
+            <figure class="steps__img--wrapper">
+              <img class="steps__img" src="./assests/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+            </figure>
+          </div>
+          <div class="steps__column-2">
+            <p class="steps__subtitle">
+              <span class="blue">STEPS</span>
+            </p>
+            <h1 class="steps__title">
+              East to <span class="blue">Get Started</span>
+            </h1>
+            <div class="steps_steps">
+              <div class="steps__step">
+                <p class="number">01</p>
+                <div class="steps__step--text">
+                  <h3 class="step__heading">Register</h3>
+                  <p class="step__description">
+                    Create an account with us using Google or Facebook.
+                  </p>
+                </div>
+              </div>
+              <div class="steps__step">
+                <p class="number">02</p>
+                <div class="steps__step--text">
+                  <h3 class="step__heading">Download</h3>
+                  <p class="step__description">
+                    Browse and Download the template that you like from the marketplace.
+                  </p>
+                </div>
+              </div>
+              <div class="steps__step">
+                <p class="number">03</p>
+                <div class="steps__step--text">
+                  <h3 class="step__heading">Run</h3>
+                  <p class="step__description">
+                    Follow the instructions to setup and customize the template to your needs.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
 </body>
