--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Treact Clone</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -154,10 +155,11 @@
             <h1 class="quality__description--heading">
               Designed & Developed by <span class="blue">Professionals.</span>
             </h1>
-            <p class="quality__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="quality__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat.</p>
-              <button class="btn quality__btn">Learn More</button>
+            <button class="btn quality__btn">Learn More</button>
           </div>
           <div class="quality__column-2">
             <figure class="quality__img--wrapper">
@@ -182,7 +184,7 @@
               <span class="blue">STEPS</span>
             </p>
             <h1 class="steps__title">
-              East to <span class="blue">Get Started</span>
+              Easy to <span class="blue">Get Started</span>
             </h1>
             <div class="steps_steps">
               <div class="steps__step">
@@ -217,7 +219,98 @@
         </div>
       </div>
     </div>
-
+  </section>
+  <section id="values">
+    <div class="container">
+      <div class="row">
+        <div class="values__columns">
+          <div class="values__column-1">
+            <p class="values__subheading">
+              <span class="blue">VALUES</span>
+            </p>
+            <h1 class="values__heading">
+              We Always Abide by Our <span class="blue">Principles.</span>
+            </h1>
+            <p class="values__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+            </p>
+            <div class="values__features">
+              <div class="values__feature">
+                <div class="values__svg-header">
+                  <figure class="values__svg--wrapper">
+                    <svg class="values__svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                      viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round">
+                      <line x1="12" y1="1" x2="12" y2="23"></line>
+                      <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
+                    </svg>
+                  </figure>
+                  <h2 class="values__feature--header">
+                    Affordable
+                  </h2>
+                </div>
+                <p class="values__feature--para">
+                  We promise to offer you the best rate we can - at par with the industry standard.
+                </p>
+              </div>
+              <div class="values__feature">
+                <div class="values__svg-header">
+                  <figure class="values__svg--wrapper">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-briefcase">
+                      <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+                      <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                    </svg>
+                  </figure>
+                  <h2 class="values__feature--header">
+                    Professionalism
+                  </h2>
+                </div>
+                <p class="values__feature--para">
+                  We assure you that our templates are designed and created by professional designers. </p>
+              </div>
+            </div>
+            <button class="btn values__btn">Learn More</button>
+          </div>
+          <div class="values__column-2">
+            <figure class="values__img--wrapper">
+              <img class="values__img" src="./assests/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
+                alt="">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="pricing">
+    <div class="container">
+      <div class="row">
+        <div class="pricing__header--container">
+          <p class="pricing__header--subtitle">
+            <span class="blue">PRICING</span>
+          </p>
+          <h1 class="pricing__header--title">
+            Reasonable & Flexible <span class="blue">Plans</span>
+          </h1>
+          <p class="pricing__header--para">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua.
+          </p>
+        </div>
+        <div class="pricing__plan--container">
+          <div class="pricing__plan">
+            <div class="pricing__plan--header">
+              <p class="plan__header--name">PERSONAL</p>
+              <p class="plan__header--price">$17.99</p>
+              <p class="plan__header--duration">MONTHLY</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 </body>
