Testimonials Section Completed

--- a/index.html
+++ b/index.html
@@ -287,30 +287,129 @@
   </section>
   <section id="pricing">
     <div class="container">
-      <div class="row">
-        <div class="pricing__header--container">
-          <p class="pricing__header--subtitle">
-            <span class="blue">PRICING</span>
-          </p>
-          <h1 class="pricing__header--title">
-            Reasonable & Flexible <span class="blue">Plans</span>
-          </h1>
-          <p class="pricing__header--para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.
-          </p>
-        </div>
-        <div class="pricing__plan--container">
-          <div class="pricing__plan">
-            <div class="pricing__plan--header">
-              <p class="plan__header--name">PERSONAL</p>
-              <p class="plan__header--price">$17.99</p>
-              <p class="plan__header--duration">MONTHLY</p>
+      <div class="row pricing__row">
+        <div class="pricing__container">
+          <div class="pricing__header--container">
+            <p class="pricing__header--subtitle">
+              <span class="blue">PRICING</span>
+            </p>
+            <h1 class="pricing__header--title">
+              Reasonable & Flexible <span class="blue">Plans</span>
+            </h1>
+            <p class="pricing__header--para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
+          </div>
+          <div class="pricing__plan--container">
+            <div class="pricing__plan">
+              <div class="plan__highlight"></div>
+              <div class="pricing__plan--header">
+                <p class="plan__header--name">PERSONAL</p>
+                <p class="plan__header--price">$17.99</p>
+                <p class="plan__header--duration">MONTHLY</p>
+              </div>
+              <div class="pricing__plan--features">
+                <p class="plan__feature--main">For Individuals</p>
+                <p class="plan__feature">30 Templates</p>
+                <p class="plan__feature">7 Landing Pages</p>
+                <p class="plan__feature">12 Internal Pages</p>
+                <p class="plan__feature">Basic Assistance</p>
+              </div>
+              <div class="pricing__plan--action">
+                <button class="plan__btn plan__btn--indv">BUY NOW</button>
+              </div>
+            </div>
+            <div class="pricing__plan pricing__plan--business">
+              <div class="pricing__plan--header">
+                <p class="plan__header--name business__name">BUSINESS</p>
+                <p class="plan__header--price business__price">$37.99</p>
+                <p class="plan__header--duration business__duration">MONTHLY</p>
+              </div>
+              <div class="pricing__plan--features">
+                <p class="plan__feature--main business__feature--main">For Small Businesses</p>
+                <p class="plan__feature business__feature">60 Templates</p>
+                <p class="plan__feature business__feature">15 Landing Pages</p>
+                <p class="plan__feature business__feature">22 Internal Pages</p>
+                <p class="plan__feature business__feature">Priority Assistance</p>
+              </div>
+              <div class="pricing__plan--action">
+                <button class="plan__btn plan__btn-bus">BUY NOW</button>
+              </div>
+            </div>
+            <div class="pricing__plan">
+              <div class="plan__highlight plan__highlight--enterprise"></div>
+              <div class="pricing__plan--header">
+                <p class="plan__header--name">ENTERPRISE</p>
+                <p class="plan__header--price">$57.99</p>
+                <p class="plan__header--duration">MONTHLY</p>
+              </div>
+              <div class="pricing__plan--features">
+                <p class="plan__feature--main">For Large Companies</p>
+                <p class="plan__feature">90 Templates</p>
+                <p class="plan__feature">27 Landing Pages</p>
+                <p class="plan__feature">37 Internal Pages</p>
+                <p class="plan__feature">Personal Assistance</p>
+              </div>
+              <div class="pricing__plan--action">
+                <button class="plan__btn plan__btn-ent">BUY NOW</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </section>
+  <section id="testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="testim__column--container">
+          <div class="testim__column-1">
+            <figure class="testim__img--wrapper">
+              <img class="testim__img" src="./assests/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+            </figure>
+          </div>
+          <div class="testim__column-2">
+            <p class="testim__subheading">
+              <span class="blue">TESTIMONIALS</span>
+            </p>
+            <h1 class="testim__title">
+              Our Clients <span class="blue">Love Us.</span>
+            </h1>
+            <p class="testim__para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua enim ad minim veniam.
+            </p>
+            <div class="testim__rating--container">
+              <i class="fas fa-star" aria-hidden="true"></i>
+              <i class="fas fa-star" aria-hidden="true"></i>
+              <i class="fas fa-star" aria-hidden="true"></i>
+              <i class="fas fa-star" aria-hidden="true"></i>
+              <i class="fas fa-star" aria-hidden="true"></i>
+            </div>
+            <p class="testim__rating--heading">
+              Amazing User Experience
+            </p>
+            <p class="testim__rating--quotation">
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+              minim veniam, quis nostrud exercitation ullamco.
+            </p>
+            <div class="testim__customer--info">
+              <figure class="customer__pic--wrapper">
+                <img src="./assests/photo-1494790108377-be9c29b29330.avif" alt="" class="customer__pic">
+              </figure>
+              <div class="testim__customer--text">
+                <p class="customer__name">Charlotte Hale</p>
+                <p class="customer__title">Director, Delos Inc.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
 </body>
