--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <div class="column-2">
-                <figure>
+                <figure class="header__img--wrapper">
                   <img class="header__img" src="./assests/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
                     alt="">
                 </figure>
@@ -158,7 +158,8 @@
               </h1>
               <p class="quality__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
                 ea commodo consequat.</p>
               <button class="btn quality__btn">Learn More</button>
             </div>
@@ -234,7 +235,8 @@
               </h1>
               <p class="values__para">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
                 ea commodo consequat.
               </p>
               <div class="values__features">
@@ -394,7 +396,8 @@
               <p class="testim__rating--quotation">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                ad
                 minim veniam, quis nostrud exercitation ullamco.
               </p>
               <div class="testim__customer--info">
@@ -423,16 +426,103 @@
                 <button class="developers__btn--started">Get Started</button>
                 <button class="developers__btn--contact">Contact Us</button>
               </div>
-            </div>  
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
   <footer id="footer">
-    <div class="container">
-      <div class="row">
-        
+    <div class="container footer__container">
+      <div class="row footer__row">
+        <div class="footer__top">
+          <div class="footer__links--wrapper">
+            <p class="footer__title">MAIN</p>
+            <ul class="footer__link--list">
+              <li class="footer__link">Blog</li>
+              <li class="footer__link">FAQs</li>
+              <li class="footer__link">Support</li>
+              <li class="footer__link">About Us</li>
+            </ul>
+          </div>
+          <div class="footer__links--wrapper">
+            <p class="footer__title">PRODUCT</p>
+            <ul class="footer__link--list">
+              <li class="footer__link">Log In</li>
+              <li class="footer__link">Personal</li>
+              <li class="footer__link">Business</li>
+              <li class="footer__link">Team</li>
+            </ul>
+          </div>
+          <div class="footer__links--wrapper">
+            <p class="footer__title">PRESS</p>
+            <ul class="footer__link--list">
+              <li class="footer__link">Logos</li>
+              <li class="footer__link">Events</li>
+              <li class="footer__link">Stories</li>
+              <li class="footer__link">Office</li>
+            </ul>
+          </div>
+          <div class="footer__links--wrapper">
+            <p class="footer__title">TEAM</p>
+            <ul class="footer__link--list">
+              <li class="footer__link">Career</li>
+              <li class="footer__link">Founders</li>
+              <li class="footer__link">Culture</li>
+              <li class="footer__link">Onboarding</li>
+            </ul>
+          </div>
+          <div class="footer__links--wrapper">
+            <p class="footer__title">LEGAL</p>
+            <ul class="footer__link--list">
+              <li class="footer__link">GDPR</li>
+              <li class="footer__link">Privacy Policy</li>
+              <li class="footer__link">Terms of Service</li>
+              <li class="footer__link">Disclaimer</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__divider"></div>
+        <div class="footer__bottom">
+          <div class="footer__logo">
+            <figure class="footer__img--wrapper">
+              <img class="footer__img" src="./assests/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+            </figure>
+            <h5 class="footer__logo--text">Treact Inc.</h5>
+          </div>
+          <div class="footer__copyright-container">
+            <p class="footer__copyright"> &#169 2018 Treact Inc. All Rights Reserved.</p>
+          </div>
+          <ul class="social__link--list">
+            <li class="social__link--wrapper">
+              <a href="">
+                <svg class="social__link" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z">
+                  </path>
+                </svg>
+              </a>
+            </li>
+            <li class="social__link--wrapper">
+              <a href="">
+                <svg class="social__link" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="M22.162 5.656a8.384 8.384 0 01-2.402.658A4.196 4.196 0 0021.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 00-7.126 3.814 11.874 11.874 0 01-8.62-4.37 4.168 4.168 0 00-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 01-1.894-.523v.052a4.185 4.185 0 003.355 4.101 4.21 4.21 0 01-1.89.072A4.185 4.185 0 007.97 16.65a8.394 8.394 0 01-6.191 1.732 11.83 11.83 0 006.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 002.087-2.165z">
+                  </path>
+                </svg>
+              </a>
+            </li>
+            <li class="social__link--wrapper">
+              <a href="">
+                <svg class="social__link" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z">
+                  </path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </footer>
