--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Treact Clone</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </head>
 
 <body>
@@ -27,6 +28,22 @@
               <li class="nav__link nav__link--login">Login</li>
               <li class="nav__link nav__link--btn"><button class="btn">Sign Up</button></li>
             </ul>
+            <button class="btn__menu btn__burger" onclick="openMenu()">
+              <svg class="button__bars" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledMenuIcon-lj69nl-15 cPytOe"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+            </button>
+            <div class="menu__backdrop">
+              <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledCloseIcon-lj69nl-14 fASujC"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+              </button>
+              <ul class="menu__links">
+                <li class="menu__list"><a class="menu__link" onclick="closeMenu()"  href="">About</a></li>
+                <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="">Blog</a></li>
+                <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="">Pricing</a></li>
+                <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="">Contact Us</a></li>
+                <li class="menu__list"><a class="menu__link" onclick="closeMenu()" href="">Login</a></li>
+                <li class="menu__list"><a class="menu__link menu__link--btn" onclick="closeMenu()" href="">Sign Up</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
